output text mined prompt